[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciipy"
version = "1.0.0"
description = "Convert images into ASCII art"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [{ name="Kian Eliasi", email="kianelbo@gmail.com" }]
dependencies = [
    "Pillow>=11.3.0"
]

[project.scripts]
asciipy = "asciipy.__main__:main"

[project.urls]
Homepage = "https://github.com/kianelbo/asciipy"
