[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciipy"
version = "1.0.0"
description = "Convert images into ASCII art"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name="Kian Eliasi", email="kianelbo@gmail.com" }]
dependencies = [
    "Pillow>=11.3.0"
]

[project.scripts]
asciipy = "asciipy.__main__:main"

[project.urls]
Homepage = "https://github.com/kianelbo/asciipy"
